# TP_lab5

./: CMakeLists.txt  adddialog.cpp  adddialog.h  mainwindow.cpp  mainwindow.h  tst_adddialog.cpp
SweetLibrary/include/: Logger.h  PresentBox.h  SweetLibrary.h
